# LibraryManagementSystem

./: CMakeLists.txt  Readme.md  main.cpp
include/: Admin.h  Book.h  BookCatalog.h  BookCollection.h  BookIterator.h  BookNotFoundException.h  Date.h  DiscountCoupon.h  EmailNotification.h  Feedback.h  Library.h  LibraryException.h  LibraryManager.h  Member.h  SearchEngine.h  Staff.h  Statistics.h  Transaction.h  User.h  UserProfile.h  ibraryManager.h
